# WebNeural

./: .gitmodules  CMakeLists.txt  README.md
src/: Allocator.cpp  Allocator.hpp  CMakeLists.txt  Image.cpp  Image.hpp  LossFunction.cpp  LossFunction.hpp  Model.cpp  Model.hpp  ModelTest.cpp  Optimizer.cpp  Optimizer.hpp  PostUpdateFunction.cpp  PostUpdateFunction.hpp  Tensor.cpp  Tensor.hpp  util.cpp  util.hpp
src/algorithm/: WCGAN.cpp  WCGAN.hpp  WCGAN_test.cpp
src/http/: CMakeLists.txt  index.html  run_web_server.sh  style.css
src/http/AutoEncoderInterpolation/: CMakeLists.txt  index.html  main.cpp  main.js  style.css
src/http/AutoEncoderInterpolationFashion/: CMakeLists.txt  index.html  main.cpp
src/http/WCGAN_Interpolation/: CMakeLists.txt  index.html  main.cpp  main.js  style.css
src/http/WCGAN_Interpolation/snippet/: headercpp.html  networkcpp.html
src/node/: BatchNormalization.cpp  BatchNormalization.hpp  Bias.cpp  Bias.hpp  BilinearUpsampling.cpp  BilinearUpsampling.hpp  Border.cpp  Border.hpp  Convolution2D.cpp  Convolution2D.hpp  Convolution2DTest.cpp  Deconvolution2D.cpp  Deconvolution2D.hpp  Deconvolution2DTest.cpp  Dropout.cpp  Dropout.hpp  Input.cpp  Input.hpp  LeakyRelu.cpp  LeakyRelu.hpp  Linear.cpp  Linear.hpp  LinearTest.cpp  MaxPooling.cpp  MaxPooling.hpp  Node.cpp  Node.hpp  Noise.cpp  Noise.hpp  Relu.cpp  Relu.hpp  ReluTest.cpp  Sigmoid.cpp  Sigmoid.hpp  Softmax.cpp  Softmax.hpp  SoftmaxTest.cpp  Tanh.cpp  Tanh.hpp
src/test/: gan_tests.cpp  mnist_test.cpp  mnist_tests.cpp
src/util/: stable_softmax.cpp  stable_softmax.hpp
